# OpenGLRenderer

./: .editorconfig  .gitignore  .gitmodules  AABB.cpp  AABB.h  BRDFShader.cpp  BRDFShader.h  BloomBuffer.cpp  BloomBuffer.h  BloomRenderer.cpp  BloomRenderer.h  CMakeLists.txt  Camera.cpp  Camera.h  ConverterShader.cpp  ConverterShader.h  ConvolutionShader.cpp  ConvolutionShader.h  CubeMap.cpp  CubeMap.h  CullState.cpp  CullState.h  DiffuseIBL.cpp  DiffuseIBL.h  DirectionalLight.cpp  DirectionalLight.h  DownSampleShader.cpp  DownSampleShader.h  DrawCall.h  Entity.cpp  Entity.h  EntityRenderer.cpp  EntityRenderer.h  FBOAttachment.h  FastInstancedShader.cpp  FastInstancedShader.h  Files.cpp  Files.h  FrameBuffer.cpp  FrameBuffer.h  (+189 more)
.github/workflows/: cmake.yml  codeql.yml
imgui/: CMakeLists.txt
libs/: CMakeLists.txt  ImGui.cmake  simdjson.cmake
libs/imgui/: CMakeLists.txt
res/gfx/Bench/: Bench.gltf
res/gfx/Box/: license.txt  scene.gltf
res/gfx/Cottage/: Cottage.gltf
res/gfx/Stage/: stage.blend  stage.blend1  stage.gltf  stage.mtl
res/gfx/Stall/: stall.blend  stall.gltf  stall.mtl
res/gfx/test/: test.blend  test.blend1  test.mtl
res/shaders/: AmbientOcclusionFS.glsl  AmbientOcclusionVS.glsl  ComputeBRDF_FS.glsl  ComputeBRDF_VS.glsl  ConverterFS.glsl  ConverterVS.glsl  ConvolutionFS.glsl  ConvolutionVS.glsl  DownSampleFS.glsl  FastInstancedFS.glsl  FastInstancedVS.glsl  GeometryPassFS.glsl  GeometryPassVS.glsl  GuiFS.glsl  GuiVS.glsl  InstancedFS.glsl  LightingFS.glsl  LightingVS.glsl  OmniShadowFS.glsl  OmniShadowGS.glsl  OmniShadowVS.glsl  PostProcessFS.glsl  PostProcessVS.glsl  PreFilterFS.glsl  PreFilterVS.glsl  SSAOBlurFS.glsl  SSAOBlurVS.glsl  SSAO_FS.glsl  SSAO_VS.glsl  ShadowFS.glsl  ShadowGS.glsl  ShadowInstancedFS.glsl  ShadowInstancedGS.glsl  ShadowInstancedVS.glsl  ShadowVS.glsl  SkyboxFS.glsl  SkyboxVS.glsl  SpotShadowFS.glsl  SpotShadowGS.glsl  SpotShadowVS.glsl  (+20 more)
scripts/: cloc.sh  loc.py  size.py
